--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Yong-Kuk Jeong</h1>
-      <h2 class="project-tagline">Ph.D. Student in CASPER Lab.</h2>
-	  <h2 class="project-tagline">Department of Naval Architecture & Ocean Engineering</h2>
-	  <h2 class="project-tagline">Seoul National University, Seoul, Korea</h2>
+      <h2 class="project-tagline">Ph.D. Student in CASPER Lab.<br>Department of Naval Architecture & Ocean Engineering<br>Seoul National University, Seoul, Korea</h2>	  
     </section>
 
     <section class="main-content">
