--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>myWORLD by jeongyk89</title>
+    <title>Yong-Kuk Jeong Ph.D. Candidates</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Yong-Kuk Jeong</h1>
-      <h2 class="project-tagline">Ph.D. Student in CASPER Lab.<br>Department of Naval Architecture & Ocean Engineering<br>Seoul National University, Seoul, Korea</h2>	  
+      <h2 class="project-tagline">Ph.D. Candidates in CASPER Lab.<br>Department of Naval Architecture & Ocean Engineering<br>Seoul National University, Seoul, Korea</h2>	  
     </section>
 
     <section class="main-content">
