--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 			<li>DongKun Lee, YoungMin Kim, <b>YongKuk Jeong</b>, Jong Gye Shin, Simulation-based Work Plan Verification in Shipyards, 2014, <i>Journal of Ship Production and Design</i>, 30(1), pp. 1-9</li>
 			<li>Dong Kun Lee, <b>Yong-Kuk Jeong</b>, Jong Gye Shin and Dae-Kyun Oh, 2014, Optimized Design of Electric Propulsion System for Small Crafts using the Differential Evolution Algorithm, <i>INTERNATIONAL JOURNAL OF PRECISION ENGINEERING AND MANUFACTURING-GREEN TECHNOLOGY</i>, 1(3), pp. 229-240</li>
 			<li>SeungHoon Nam, Dong Kun Lee, <b>Yong-Kuk Jeong</b>, Philippe Lee and Jong-Gye Shin, 2016, Environmental Impact Assessment of Composite Small Craft Manufacturing Using the Work Breakdown Structure, <i>INTERNATIONAL JOURNAL OF PRECISION ENGINEERING AND MANUFACTURING – GREEN TECHNOLOGY</i>, 3(3), pp. 261-272</li>
-			<li>Jong Hun Woo, Youngmin Kim, Yong-Kuk Jeong, Jong-Gye Shin, 2016, A Research on Simulation Framework for the Advancement of Supplying Management Competency, <i>Journal of Ship Production and Design</i>, Available online</li>
-			<li>Test</li>
+			<li>Jong Hun Woo, Youngmin Kim, <b>Yong-Kuk Jeong</b>, Jong-Gye Shin, 2016, A Research on Simulation Framework for the Advancement of Supplying Management Competency, <i>Journal of Ship Production and Design</i>, Available online</li>			
 		</ul>
 		<h3><a id="conference" class="anchor" href="#conference" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Conference</h3>
 		<ul>
