관심 분야 수정

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 		</ul>
 		<h3><a id="research-interests" class="anchor" href="#research-interests" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research Interests</h3>
 		<ul>
-			<li>Digital shipbuilding & Shipyard logistics</li>
+			<li>Simulation of shipbuilding process and shipyard logistics</li>
 			<li>Discrete event system simulation</li>
-			<li>Spaital arrangement algorithms</li>
+			<li>System development (C#, Silverlight, HTML)</li>
+			<li>Life cycle assessment</li>
 			<li>Combinatorial optimization algorithms</li>
 		</ul>
 		<h3><a id="papers-international" class="anchor" href="#papers-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Papers (International)</h3>
