--- a/index.html
+++ b/index.html
@@ -46,17 +46,19 @@
 		</ul>
 		<h3><a id="papers-domestic" class="anchor" href="#papers-domestic" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Papers (Domestic)</h3>
 		<ul>
-			<li><b>정용국</b>, 우종훈, 오대균, 신종계, (2016), <u>공정 중심 시뮬레이션 모델링 방법론을 이용한 조선소 생산 시뮬레이션 시스템: 중일정계획 검증 시뮬레이션 모델 구축 사례를 중심으로</u>, 한국 CAD/CAM학회 논문집, 21(2), pp. 204-214 <a href="https://www.dbpia.co.kr/Journal/ArticleDetail/NODE06761937">[LINK]</a></li>
-			<li>김영민, <b>정용국</b>, 주수헌, 신종계, 신정학, (2014), <u>Differential evolution 알고리즘을 이용한 생존성 기반의 함정 격실배치 애플리케이션 개발</u>, 한국 CAD/CAM학회 논문집, 19(4), pp. 1-13 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE06071036">[LINK]</a></li>
-			<li>이동건, 남승훈, <b>정용국</b>, 신종계, (2014), <u>세일링요트 엔지니어링 통합관리를 위한 Generic-YWBS 개발</u>, 대한조선학회논문집, 51(1), pp. 16-25 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE02361200">[LINK]</a></li>
-			<li>이동건, <b>정용국</b>, 신종계, (2013), <u>Study on a Layout Design Method for Leisure Ship Production Factories using a Heuristic Location-Allocation Algorithm</u>, 해양환경안전학회지, 19(3), pp. 277-284 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE02195996">[LINK]</a></li>
-			<li><b>정용국</b>, 이동건, 정우철, 오대균, 신종계, (2013), <u>쌍동형 배수량 2.5 톤급 어선의 전기추진 시스템 운항성능 추정 프로세스 연구</u>, 한국해양공학회지, 27(5), pp. 1-9 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE02265693?TotalCount=0&Seq=24&isIdentifyAuthor=1&Collection=0&isFullText=0&specificParam=0&SearchMethod=0&Page=1&PageSize=20">[LINK]</a></li>
-			<li>이동건, <b>정용국</b>, 신종계, (2013), <u>레저보트 생산공정정보 기반의 공장 레이아웃 설계 시스템 개발</u>, 대한조선학회논문집, 50(1), pp. 14-24 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE02093344?TotalCount=0&Seq=18&isIdentifyAuthor=1&Collection=0&isFullText=0&specificParam=0&SearchMethod=0&Page=1&PageSize=20">[LINK]</a></li>
-			<li>이동건, 남승훈, <b>정용국</b>, 신종계, (2013), <u>세일요트 통합관리 시스템을 위한 웹기반 YWBS 설계 프로그램</u>, 대한산업공학회지, 39(1), pp. 1-9 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE02078979">[LINK]</a></li>
+			<li><b>Yong-Kuk Jeong</b>, Jong-Hun Woo, Dae-Kyun Oh, and Jong-Gye Shin, (2016), <u>A Shipyard Simulation System using the Process-centric Simulation Modeling Methodology: Case Study of the Simulation Model for the Shipyard Master Plan Validation</u>, Transactions of the Society of CAD/CAM Engineers, 21(2), pp. 204-214 <a href="https://www.dbpia.co.kr/Journal/ArticleDetail/NODE06761937">[LINK]</a></li>
+			<li>Youngmin Kim, <b>Yong-Kuk Jeong</b>, SuHeon Ju, Jong-Gye Shin, and Jung-Hack Shin, (2014), <u>Development of a Naval Vessel Compartment Arrangement Application using Differential Evolution Algorithm</u>, Transactions of the Society of CAD/CAM Engineers, 19(4), pp. 1-13 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE06071036">[LINK]</a></li>
+			<li>Dong Kun Lee, Seung Hoon Nam, <b>Yong-Kuk Jeong</b>, Jong-Gye Shin, (2014), <u>Development of a Generic-YWBS for Engineering Integrated Management of Sailing Yacht</u>, Journal of the Society of Naval Architects of Korea, 51(1), pp. 16-25 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE02361200">[LINK]</a></li>
+			<li>Dong-Kun Lee, <b>Yong-Kuk Jeong</b>, Jong-Gye Shin, (2013), <u>Study on a Layout Design Method for Leisure Ship Production Factories using a Heuristic Location-Allocation Algorithm</u>, Journal of the Korean Society of Maritime Environment & Safety, 19(3), pp. 277-284 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE02195996">[LINK]</a></li>
+			<li><b>Yong-Kuk Jeong</b>, Dong-Kun Lee, Uh-Cheul Jeong, Cheol-Ho Ryu, Dae-Kyun Oh, Jong-Gye Shin, (2013), <u>Study on Operating Performance Estimation Process of Electric Propulsion Systems for 2.5 Displacement Ton Class Catamaran Fishing Boat</u>, Journal of Ocean Engineering and Technology, 27(5), pp. 1-9 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE02265693?TotalCount=0&Seq=24&isIdentifyAuthor=1&Collection=0&isFullText=0&specificParam=0&SearchMethod=0&Page=1&PageSize=20">[LINK]</a></li>
+			<li>Dong-Kun Lee, <b>Yong-Kuk Jeong</b>, Jong Gye Shin, (2013), <u>Development of a Factory Layout Design System using Leisure-Boat Building Process</u>, Journal of the Society of Naval Architects of Korea, 50(1), pp. 14-24 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE02093344?TotalCount=0&Seq=18&isIdentifyAuthor=1&Collection=0&isFullText=0&specificParam=0&SearchMethod=0&Page=1&PageSize=20">[LINK]</a></li>
+			<li>Dong Kun Lee, Seung Hoon Nam, <b>Yong Kuk Jeong</b>, Jong Gye Shin, (2013), <u>Development of a Web-Based Application for YWBS in Integrated Management Systems</u>, Journal of the Korean Institute of Industrial Engineers, 39(1), pp. 1-9 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE02078979">[LINK]</a></li>
 		</ul>	
 		<h3><a id="conference-domestic" class="anchor" href="#conference-domestic" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Conference (Domestic)</h3>
 		<ul>
-			<li>TBD</li>			
+			<li>이동건, <b>정용국</b>, 신종계, (2012), <u>GICS: 체계화된 산업융합 분류 및 평가 모델</u>, 2012년 대한산업공학회 춘계학술대회(제1회 산업융합 활성화 방안 연구 논문 공모전 장려상)</li>
+			<li><b>정용국</b>, 남승훈, 이동건, 신종계, (2012), <u>세일요트 통합 관리 시스템 구축을 위한 제품 정보 기반의 작업분류체계 설계</u>, 2012년 대한산업공학회 춘계학술대회</li>
+			<li><b>정용국</b>, 이동건, 신종계, (2011), <u>레저보트 공장 설계 시스템 개발을 위한 배치 및 평가 방안 연구</u>, 2011년 한국정밀공학회 추계학술대회</li>			
 		</ul>
 		<h3><a id="awards-and-honors" class="anchor" href="#awards-and-honors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Awards and Honors</h3>
 		<ul>
