국내 학술대회 발표 목록 작성 완료

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<ul>
 			<li>Simulation of shipbuilding process and shipyard logistics</li>
 			<li>Discrete event system simulation</li>
+			<li>Layout design methodology (Shiyard, Naval vessel)</li>
 			<li>System development (C#, Silverlight, HTML)</li>
 			<li>Life cycle assessment</li>
 			<li>Combinatorial optimization algorithms</li>
@@ -56,6 +57,39 @@
 		</ul>	
 		<h3><a id="conference-domestic" class="anchor" href="#conference-domestic" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Conference (Domestic)</h3>
 		<ul>
+			<li>김병섭, <b>정용국</b>, 신종계, 이종무, 이필립, 이동건, (2016), <u>블록 물류 시뮬레이션을 위한 공정 중심 모델링 방법 개선 및 시스템 개발</u>, 2016년 대한조선학회 추계학술대회</li>
+			<li>이동건, 김용오, <b>정용국</b>, 백승대, (2016), <u>중소형조선소 선행탑재 공정의 공간배치계획 시스템 개발</u>, 2016년 한국정밀공학회 춘계학술대회</li>
+			<li>심휘강, 주수헌, <b>정용국</b>, 신종계, 김용오, 이동건, 백승대, (2016), <u>조립 블록 대형화에 따른 조선소 조립장 정반배치 알고리즘 및 평가 방법</u>, 2016년 한국해양과학기술협의회 공동학술대회</li>
+			<li>주수헌, 안동현, <b>정용국</b>, 민영기, 신종계, 김종철, (2016), <u>내부 공간과 외부 형상의 연관관계를 고려한 선박 격실배치 알고리즘</u>, 2016년 한국해양과학기술협의회 공동학술대회</li>
+			<li><b>정용국</b>, 남승훈, 신종계, 이필립, (2016), <u>인더스트리 4.0 개념 적용을 위한 조선소 시뮬레이션 기반 생산관리 시스템 현황 및 발전 방향</u>, 2016년 한국해양과학기술협의회 공동학술대회</li>
+			<li>박성혁, <b>정용국</b>, 이필립, 우종훈, 신종계, (2016), <u>디지털 조선소 구축을 위한 시뮬레이션 요구사항 분석 시스템 설계</u>, 2016년 대한산업공학회 춘계공동학술대회</li>
+			<li>우종훈, 이필립, <b>정용국</b>, 박성혁, 신종계, 최우성, 윤태혁, 이종무, 이호윤, (2016), <u>디지털 조선소 구축을 위한 프레임워크 개발 및 프로세스 기반 시뮬레이션 커널에 관한 연구</u>, 2016년 한국CAD/CAM학회 동계학술대회</li>
+			<li><b>정용국</b>, 김병섭, 이용길, 임현규, 백선중, 이필립, 우종훈, 오대균, 신종계, (2016), <u>공정 중심 시뮬레이션 모델링 방법론을 이용한 조선소 생산 시뮬레이션 시스템 구축 방법: 중일정계획 검증 시뮬레이션 모델 구축 사례를 중심으로</u>, 2016년 한국CAD/CAM학회 동계학술대회</li>
+			<li>주수헌, <b>정용국</b>, 신종계, 김용오, 이동건, (2015), <u>효율적인 면적 활용을 위한 조선소 선행 탑재 블록의 최적 배치</u>, 2015년 한국정밀공학회 추계학술대회</li>
+			<li>정진욱, 이동규, <b>정용국</b>, 김영민, 민영기, 신종계, 김종철, (2015), <u>생존성 기반 함정 내부 공간배치 최적화를 위한 피격성 정량화 방법 연구</u>, 2015년 대한조선학회 추계학술대회</li>
+			<li>이동건, 정기석, 백선중, <b>정용국</b>, 황봉휘, 갈건영, 최창림, 유성환, (2015), <u>정보전략계획(ISP) 방법론을 이용한 호남권 중형 조선소 현황분석 사례 연구</u>, 2015년 한국해양과학기술협의회 공동학술대회</li>
+			<li>이정호, 남승훈, <b>정용국</b>, 류철호, 신종계, 황인혁, (2015), <u>중소형 조선소 맞춤형 통합 생산계획 시스템 개발을 위한 요구사항 분석</u>, 2015년 한국해양과학기술협의회 공동학술대회</li>
+			<li>김병섭, <b>정용국</b>, 안동현, 정우철, 신종계, (2015), <u>범용 작업분류체계를 활용한 전기추진선박 작업분류체계 및 프로젝트 관리 프로그램</u>, 2015년 한국해양과학기술협의회 공동학술대회</li>
+			<li>이필립, 남승훈, <b>정용국</b>, 이동건, 최양열, (2015), <u>세일링요트 작업분류체계 정보 분석을 위한 데이터 시각화 시스템 개발</u>, 2015년 대한산업공학회 춘계학술대회</li>
+			<li>김병섭, 주수헌, <b>정용국</b>, 남승훈, 신종계, (2015), <u>정보전략계획(ISP)을 이용한 중소형 조선소 생산계획 시스템 개선에 관한 연구</u>, 2015년 대한산업공학회 춘계학술대회</li>
+			<li>주수헌, <b>정용국</b>, 정진욱, 김영민, 신종계, (2015), <u>생존성 기반 함정 공간배치 평가를 위한 Fuzzy AHP 접근법</u>, 2015년 한국CAD/CAM학회 동계학술대회</li>
+			<li>이필립, 이동건, 남승훈, <b>정용국</b>, 최양열, (2014), <u>보트 복합소재 LCA 분석을 위한 방법론 개발</u>, 2014년 대한기계학회 추계학술대회</li>
+			<li>주수헌, 김영민, <b>정용국</b>, 정진욱, 신종계, (2014), <u>확률성장 알고리즘과 차분진화 알고리즘을 이용한 특수선의 공간배치 방법</u>, 2014년 대한조선학회 추계학술대회</li>
+			<li>주수헌, 김영민, <b>정용국</b>, 정진욱, 신종계, (2014), <u>확률성장 알고리즘으로 구현한 특수선 격실배치 결과의 취약성 간이 평가</u>, 제10회 해양무기 학술대회</li>
+			<li>정진욱, 김영민, <b>정용국</b>, 주수헌, 신종계, 신정학, (2014), <u>함정의 생존성과 격실관계를 고려한 구획배치 최적화</u>, 2014년 함정기술연구회 하계연구발표회</li>
+			<li>강기문, <b>정용국</b>, 이동건, 오대균, (2014), <u>국제규정에 따른 복합재료 레저선박의 선체설계와 평가</u>, 2014년 해양환경안전학회 춘계공동학술대회(우수발표상)</li>
+			<li>강기문, <b>정용국</b>, 이동건, 오대균, (2014), <u>CFRP 선체 제작을 위한 Carbon Fiber 중량과 설계면적 요구두께와의 관계</u>, 2014년 한국해양과학기술협의회 공동학술대회(우수발표상)</li>
+			<li>이동건, 이필립 남승훈, <b>정용국</b>, (2014), <u>세일링 요트의 작업분류체계 기반 지식 분석과 가시화</u>, 2014년 대한기계학회 생산분과 춘계학술대회</li>
+			<li>남승훈, <b>정용국</b>, 이동건, 신종계, (2014), <u>Generic-YWBS를 이용한 세일링 요트의 공수추정 방법에 관한 연구</u>, 2014년 한국정밀공학회 춘계학술대회</li>
+			<li><b>정용국</b>, 남승훈, 이동건, 오대균, 신종계, (2014), <u>평형자세를 고려한 전기추진 선박의 배터리 최적 배치 연구</u>, 2014년 한국정밀공학회 춘계학술대회</li>
+			<li>김영민, <b>정용국</b>, 주수헌, 정진욱, 신종계, (2014), <u>함정의 생존성과 격실 관계를 고려한 구획배치 최적화</u>, 2014년 한국해양과학기술협의회 공동학술대회</li>
+			<li><b>정용국</b>, 남승훈, 이동건, 오대균, 신종계, (2014), <u>레저선박의 전기추진 시스템 적용 가능성 평가 프로세스</u>, 2014년 한국해양과학기술협의회 공동학술대회</li>
+			<li>주수헌, 김영민, <b>정용국</b>, 신종계, (2014), <u>생존성 기반의 함정 격실 배치 알고리즘 및 응용 방안</u>, 2014년 한국CAD/CAM학회 동계학술대회</li>
+			<li>이필립, 이동건, 남승훈, <b>정용국</b>, (2014), <u>WBS 기반의 세일요트 구조 분석과 설계 정보 관리 방법 연구</u>, 2013년 대한기계학회 추계학술대회</li>
+			<li>이동건, <b>정용국</b>, 오대균, 남승훈, 정용국, (2013), <u>전기추진 레저선박의 운항성능 추정 프로세스 개발에 관한 연구</u>, 2013년 해양환경안전학회 추계학술대회</li>
+			<li><b>정용국</b>, 이동건, 남승훈, 신종계, (2013), <u>세일요트 엔지니어링 통합관리를 위한 작업분류체계 개발</u>, 2013년 대한조선학회 추계학술대회</li>
+			<li><b>정용국</b>, 이동건, 남승훈, 신종계, (2013), <u>세일링요트의 설계 및 생산 엔지니어링 관리 방법 및 시스템에 관한 연구</u>, 2013년 한국정밀공학회 추계학술대회</li>
+			<li><b>정용국</b>, 이동건, 정우철, 류철호, 신종계, (2013), <u>DMU 모델을 이용한 전기추진 레저선박의 운항성능 추정 프로세스에 관한 연구</u>, 2013년 한국해양과학기술협의회 공동학술대회</li>
 			<li>이동건, <b>정용국</b>, 신종계, (2012), <u>GICS: 체계화된 산업융합 분류 및 평가 모델</u>, 2012년 대한산업공학회 춘계학술대회(제1회 산업융합 활성화 방안 연구 논문 공모전 장려상)</li>
 			<li><b>정용국</b>, 남승훈, 이동건, 신종계, (2012), <u>세일요트 통합 관리 시스템 구축을 위한 제품 정보 기반의 작업분류체계 설계</u>, 2012년 대한산업공학회 춘계학술대회</li>
 			<li><b>정용국</b>, 이동건, 신종계, (2011), <u>레저보트 공장 설계 시스템 개발을 위한 배치 및 평가 방안 연구</u>, 2011년 한국정밀공학회 추계학술대회</li>			
