오탈자 수정

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 		</ul>		
 		<h3><a id="research-interests" class="anchor" href="#research-interests" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research Interests</h3>
 		<ul>
-			<li>Simulation of shipbuilding process and shipyard logistics</li>
-			<li>Discrete event system simulation</li>
-			<li>Layout design methodology (Shiyard, Naval vessel)</li>
-			<li>System development (C#, Silverlight, HTML)</li>
-			<li>Life cycle assessment</li>
-			<li>Combinatorial optimization algorithms</li>
+			<li>Simulation of Shipbuilding Process and Shipyard Logistics</li>
+			<li>Discrete Event System Simulation</li>
+			<li>Layout Design Methodology (Shipyard, Naval Vessel)</li>
+			<li>System Development (C#, Silverlight, HTML)</li>
+			<li>Life Cycle Assessment</li>
+			<li>Combinatorial Optimization Algorithms</li>
 		</ul>
 		<h3><a id="papers-international" class="anchor" href="#papers-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Papers (International)</h3>
 		<ul>
