--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="main-content">
 		<h3><a id="education" class="anchor" href="#education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h3>
 		<ul>
-			<li>Aug 2014, Ph.D. Candidate, Department of Naval Architecture and Ocean Engineering, Seoul National University (Advisor: Prof. Shin, Jong-Gye)</li>
+			<li>Aug 2014, Ph.D. Candidate, Department of Naval Architecture and Ocean Engineering, Seoul National University (Advisor: Prof. Shin, Jong-Gye) <a href="http://casper.snu.ac.kr">[LINK: CASPER Lab.]</a></li>
 			<li>Feb 2011, B.S., Department of Naval Architecture and Ocean Engineering, Seoul National University</li>
 			<li>Feb 2007, graduated from Incheon Science High School</li>			
 		</ul>		
@@ -41,7 +41,7 @@
 		<ul>
 			<li><b>Yong-Kuk JEONG</b>, Byeong-Seop Kim, Jong-Gye Shin, Philippe Lee, Jong Hun Woo, and Jong Moo Lee, (2016), <u>A Ship Block Logistics Support System based on the Shipyard Simulation Framework</u>, WSC 2016, Arlington VA, 11-14 December, 2016 <a href="http://www.slideshare.net/YongKukJeong1/a-ship-block-logistics-support-system-based-on-the-shipyard-simulation-framework">[LINK: Slides]</a></li>				 
 			<li>Seung-hyoek Son, Youngmin Kim, Inhyuck Hwang, Hui Giang Shen, <b>Yong-Kuk JEONG</b>, Cheolho Ryu, Jong-Gye Shin, (2015), <u>Design and Development of Manufacturing Information Calculation System for Formation of Curved Hull Plates</u>, MOTSP 2015, Brela Croatia, 10-12 June, 2015</li>
-			<li><b>Yong-Kuk JEONG</b>, Philippe Lee, SeungHoon Nam, Dong Kun Lee, Jong-Gye Shin, (2015), <u>Development of the Methodology for Environmental Impact of Composite Boats Manufacturing Process</u>, CIRP LCE 2015, Sydney Australia, 7-9 April, 2015 <a href="http://www.slideshare.net/YongKukJeong1/development-of-the-methodology-for-environmental-impact-assessment-of-composite-boats-manufacturing-process">[LINK: Slides]</a></li>
+			<li><b>Yong-Kuk JEONG</b>, Philippe Lee, SeungHoon Nam, Dong Kun Lee, Jong-Gye Shin, (2015), <u>Development of the Methodology for Environmental Impact of Composite Boats Manufacturing Process</u>, CIRP LCE 2015, Sydney Australia, 7-9 April, 2015 <a href="http://www.slideshare.net/YongKukJeong1/development-of-the-methodology-for-environmental-impact-assessment-of-composite-boats-manufacturing-process">[LINK: Slides]</a> <a href="http://ecoreport.codeplex.com/">[LINK: Application]</a></li>
 			<li>Jong-Gye Shin, Dong Hyun Ahn, Seung Hoon Nam, and <b>Yong-Kuk JEONG</b>, (2014), <u>An Introduction to Small boat PLM Technology</u>, ICOR 2014, Fiji, 13-15 October, 2014</li>
 			<li>Jong-Gye Shin, Seung Hoon Nam, and <b>Yong-Kuk JEONG</b>, (2014), <u>Generic Work Breakdown Structure for Sailing Yacht Lifecycle Management</u>, ICOR 2014, Fiji, 13-15 October, 2014</li>							
 		</ul>
