이메일 주소 추가

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Yong-Kuk JEONG</h1>
+	 <h2 class="project-tagline">jake8967 at snu.ac.kr</h2>
       <h2 class="project-tagline">Ph.D. Candidate in CASPER Lab.<br>Department of Naval Architecture & Ocean Engineering<br>Seoul National University, Seoul, Korea</h2>	  
     </section>
     <section class="main-content">
