실적 업로드
CDE학회 발표

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 		</ul>	
 		<h3><a id="conference-domestic" class="anchor" href="#conference-domestic" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Conference (Domestic)</h3>
 		<ul>
+			<li><b>정용국</b>, 김병섭, 신종계, 우종훈, 이필립, (2017), <u>물류 비용 절감을 위한 조선소 물류 시뮬레이션 시스템 구축과 운영 방안</u>, 2017 한국CDE학회 동계학술대회 <a href="http://www.slideshare.net/YongKukJeong1/ss-72352670">[LINK: Slides]</a></li>
 			<li>김병섭, <b>정용국</b>, 신종계, 이종무, 이필립, 이동건, (2016), <u>블록 물류 시뮬레이션을 위한 공정 중심 모델링 방법 개선 및 시스템 개발</u>, 2016년 대한조선학회 추계학술대회</li>
 			<li>이동건, 김용오, <b>정용국</b>, 백승대, (2016), <u>중소형조선소 선행탑재 공정의 공간배치계획 시스템 개발</u>, 2016년 한국정밀공학회 춘계학술대회</li>
 			<li>심휘강, 주수헌, <b>정용국</b>, 신종계, 김용오, 이동건, 백승대, (2016), <u>조립 블록 대형화에 따른 조선소 조립장 정반배치 알고리즘 및 평가 방법</u>, 2016년 한국해양과학기술협의회 공동학술대회</li>
