COMPIT, SIGSIM PADS 추가

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 		</ul>
 		<h3><a id="conference-international" class="anchor" href="#conference-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Conference (International)</h3>
 		<ul>
+			<li><b>Yong-Kuk JEONG</b>, Seung Hoon Nam, Youngmin Kim, Jong-Gye Shin, Young-Ki Min, Jong Hun Woo, Jae-Ho Choi, Sang-Hoon Kim, and Dae-Kyun Oh, (2017), <u>A modeling and simulation method for multi-layered supply chain management in shipbuilding industries</u>, ACM SIGSIM PADS 2017, NTU Singapore, 24-26 May, 2017 <a href="https://www.slideshare.net/YongKukJeong1/a-modeling-and-simulation-method-for-multilayered-supply-chain-management-in-shipbuilding-industries">[LINK: Slides]</a></li></li>
+			<li>Byeongseop Kim, <b>Yong-Kuk JEONG</b>, Seunghyeok Son, Philippe Lee, Yonggil Lee, and Jong Hun Woo, (2017), <u>The Extended Process-Centric Modeling Method for Logistics Simulation in Shipyards Considering Stock Areas</u>, COMPIT 2017, Cardiff UK, 15-17 May, 2017</li>
 			<li><b>Yong-Kuk JEONG</b>, Byeong-Seop Kim, Jong-Gye Shin, Philippe Lee, Jong Hun Woo, and Jong Moo Lee, (2016), <u>A Ship Block Logistics Support System based on the Shipyard Simulation Framework</u>, WSC 2016, Arlington VA, 11-14 December, 2016 <a href="http://www.slideshare.net/YongKukJeong1/a-ship-block-logistics-support-system-based-on-the-shipyard-simulation-framework">[LINK: Slides]</a></li>				 
 			<li>Seung-hyoek Son, Youngmin Kim, Inhyuck Hwang, Hui Giang Shen, <b>Yong-Kuk JEONG</b>, Cheolho Ryu, Jong-Gye Shin, (2015), <u>Design and Development of Manufacturing Information Calculation System for Formation of Curved Hull Plates</u>, MOTSP 2015, Brela Croatia, 10-12 June, 2015</li>
 			<li><b>Yong-Kuk JEONG</b>, Philippe Lee, SeungHoon Nam, Dong Kun Lee, Jong-Gye Shin, (2015), <u>Development of the Methodology for Environmental Impact of Composite Boats Manufacturing Process</u>, CIRP LCE 2015, Sydney Australia, 7-9 April, 2015 <a href="http://www.slideshare.net/YongKukJeong1/development-of-the-methodology-for-environmental-impact-assessment-of-composite-boats-manufacturing-process">[LINK: Slides]</a> <a href="http://ecoreport.codeplex.com/">[LINK: Application]</a></li>
@@ -59,6 +61,7 @@
 		</ul>	
 		<h3><a id="conference-domestic" class="anchor" href="#conference-domestic" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Conference (Domestic)</h3>
 		<ul>
+			<li><b>정용국</b>, 주수헌, 심휘강, 손승혁, 김병섭, 신종계, 민영기, 이동건, (2017), <u>조선소 공간 배치 계획 수립을 위한 CPS 기반 시뮬레이션 시스템</u>, 2017년도 대한기계학회 IT융합부문 춘계학술대회 <a href="https://www.slideshare.net/YongKukJeong1/cps-75938779">[LINK: Slides]</a></li>
 			<li>이용길, 우종훈, <b>정용국</b>, 이필립, (2017), <u>조선 생산공정 시뮬레이션 라이브러리 구축에 관한 연구</u>, 2017년 한국해양과학기술협의회 공동학술대회</li>
 			<li>주수헌, <b>정용국</b>, 심휘강, 신종계, 민영기, 이동건, 오대균, (2017), <u>비점유 공간과 미배치 블록을 고려한 조선소 대형 블록 배치 시뮬레이션</u>, 2017년 한국해양과학기술협의회 공동학술대회</li>
 			<li>이필립, <b>정용국</b>, 우종훈, (2017), <u>공정중심 시뮬레이션 모델의 사용성 분석</u>, 2017년 한국해양과학기술협의회 공동학술대회</li>
