--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
 		</ul>	
 		<h3><a id="conference-domestic" class="anchor" href="#conference-domestic" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Conference (Domestic)</h3>
 		<ul>
+			<li><b>정용국</b>, 신종계, 심휘강, 이필립, 우종훈, (2017), <u>조선소 물류 시뮬레이션을 통한 선박 건조 공정의 녹색 물류 KPI 산출</u>, 2017년 한국정밀공학회 춘계학술대회 <a href="https://www.slideshare.net/YongKukJeong1/kpi-76475256">[LINK: Poster]</a></li>
 			<li><b>정용국</b>, 주수헌, 심휘강, 손승혁, 김병섭, 신종계, 민영기, 이동건, (2017), <u>조선소 공간 배치 계획 수립을 위한 CPS 기반 시뮬레이션 시스템</u>, 2017년도 대한기계학회 IT융합부문 춘계학술대회 <a href="https://www.slideshare.net/YongKukJeong1/cps-75938779">[LINK: Slides]</a></li>
+			<li>박성혁, <b>정용국</b>, 이필립, 우종훈, 민영기, 신종계, (2017), <u>디지털 조선소 프레임워크를 기반으로 한 조선소 시뮬레이션 결과 평가 방법과 웹 애플리케이션</u>, 2017년 대한산업공학회 춘계공동학술대회</li>
 			<li>이용길, 우종훈, <b>정용국</b>, 이필립, (2017), <u>조선 생산공정 시뮬레이션 라이브러리 구축에 관한 연구</u>, 2017년 한국해양과학기술협의회 공동학술대회</li>
 			<li>주수헌, <b>정용국</b>, 심휘강, 신종계, 민영기, 이동건, 오대균, (2017), <u>비점유 공간과 미배치 블록을 고려한 조선소 대형 블록 배치 시뮬레이션</u>, 2017년 한국해양과학기술협의회 공동학술대회</li>
 			<li>이필립, <b>정용국</b>, 우종훈, (2017), <u>공정중심 시뮬레이션 모델의 사용성 분석</u>, 2017년 한국해양과학기술협의회 공동학술대회</li>
