--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		</ul>
 		<h3><a id="papers-international" class="anchor" href="#papers-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Papers (International)</h3>
 		<ul>
+			<li>Jong Hun Woo, Jong Moo Lee, and <b>Yong-Kuk Jeong</b>, (Submitted), <u>Development of an Evaluation Framework of Production Planning for the Shipbuilding Industry</u>, International Journal of Computer Integrated Manufacturing</li>
 			<li><b>Yong-Kuk Jeong</b>, Youngmin Kim, Su Heon Ju, Jinuk Jung, Jong-Gye Shin and Jong-Choel Kim, (Submitted), <u>Development of an optimization program for spatial layout considering the vulnerability of a naval vessel</u>, Journal of Ship Production and Design</li>
 			<li>Young Min Kim, Jong Hun Woo, <b>Yong-Kuk Jeong</b>, Jong-Gye Shin, (Submitted), <u>Computational Shipyard Dynamics</u>, Journal of Ship Production and Design</li>
 			<li><b>Yong-Kuk JEONG</b>, SuHeon Ju, Huiqiang Shen, Dong Kun Lee, Jong-Gye Shin, Cheolho Ryu, (Submitted), <u>An analysis of shipyard spatial arrangement planning problem and a spatial arrangement algorithm considering free space and unplaced block</u>, International Journal of Advanced Manufacturing Technology</li>
