2017 조선학회 추계학술대회 실적 추가
2건 추가

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
 		</ul>	
 		<h3><a id="conference-domestic" class="anchor" href="#conference-domestic" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Conference (Domestic)</h3>
 		<ul>
+			<li>이종무, <b>정용국</b>, 이종무, (2017), <u>조선소 생산 계획 평가를 위한 평가 체계 개발</u>, 2017년 대한조선학회 추계학술대회</li>
+			<li>김병섭, <b>정용국</b>, 신종계, 민영기, (2017), <u>조선소 블록 적치장 배치 문제의 강화 학습 적용 방안</u>, 2017년 대한조선학회 추계학술대회</li>
 			<li><b>정용국</b>, 신종계, 심휘강, 이필립, 우종훈, (2017), <u>조선소 물류 시뮬레이션을 통한 선박 건조 공정의 녹색 물류 KPI 산출</u>, 2017년 한국정밀공학회 춘계학술대회 <a href="https://www.slideshare.net/YongKukJeong1/kpi-76475256">[LINK: Poster]</a></li>
 			<li><b>정용국</b>, 주수헌, 심휘강, 손승혁, 김병섭, 신종계, 민영기, 이동건, (2017), <u>조선소 공간 배치 계획 수립을 위한 CPS 기반 시뮬레이션 시스템</u>, 2017년도 대한기계학회 IT융합부문 춘계학술대회 <a href="https://www.slideshare.net/YongKukJeong1/cps-75938779">[LINK: Slides]</a></li>
 			<li>박성혁, <b>정용국</b>, 이필립, 우종훈, 민영기, 신종계, (2017), <u>디지털 조선소 프레임워크를 기반으로 한 조선소 시뮬레이션 결과 평가 방법과 웹 애플리케이션</u>, 2017년 대한산업공학회 춘계공동학술대회</li>
