--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       <h2 class="project-tagline">Ph.D. Candidate in CASPER Lab.<br>Department of Naval Architecture & Ocean Engineering<br>Seoul National University, Seoul, Korea</h2>	  
     </section>
     <section class="main-content">
+		<h3><a id="profile" class="anchor" href="#education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Profile</h3>
+		<ul>
+			<li>Google Scholar <a href="https://scholar.google.co.kr/citations?user=y59QYYIAAAAJ&hl=ko">[LINK]</a></li>
+			<li>Scopus <a href="https://www.scopus.com/authid/detail.uri?origin=resultslist&authorId=56151145200&zone=">[LINK]</a></li>
+			<li>ORCID ID <a href="https://orcid.org/0000-0003-1878-773X">[LINK]</a></li>
+		</ul>		
 		<h3><a id="education" class="anchor" href="#education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h3>
 		<ul>
 			<li>Aug 2014, Ph.D. Candidate, Department of Naval Architecture and Ocean Engineering, Seoul National University (Advisor: Prof. Shin, Jong-Gye) <a href="http://casper.snu.ac.kr">[LINK: CASPER Lab.]</a></li>
