공급망 추가

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		<ul>
 			<li>Simulation of Shipbuilding Process and Shipyard Logistics</li>
 			<li>Discrete Event System Simulation</li>
+			<li>Supply Chain Management</li>
 			<li>Layout Design Methodology (Shipyard, Naval Vessel)</li>
 			<li>System Development (C#, Silverlight, HTML)</li>
 			<li>Life Cycle Assessment</li>
