--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Yong-Kuk JEONG</h1>
-	 <h2 class="project-tagline">jake8967 at snu.ac.kr</h2>
-      <h2 class="project-tagline">Ph.D. Candidate in CASPER Lab.<br>Department of Naval Architecture & Ocean Engineering<br>Seoul National University, Seoul, Korea</h2>	  
+		<h1 class="project-name">Yong-Kuk JEONG</h1>
+		<h2 class="project-tagline">jake8967 at snu.ac.kr</h2>
+		<img src="img/YKJeong.png" style="max-width: 10%; height: auto;" alt="Yong-Kuk Jeong"/>
+		<h2 class="project-tagline">Ph.D. Candidate in CASPER Lab.<br>Department of Naval Architecture & Ocean Engineering<br>Seoul National University, Seoul, Korea</h2>	  
     </section>
     <section class="main-content">
 		<h3><a id="profile" class="anchor" href="#profile" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Profile</h3>
