--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="page-header">
 		<h1 class="project-name">Yong-Kuk JEONG</h1>
 		<h2 class="project-tagline">jake8967 at snu.ac.kr</h2>
-		<img src="img/YKJeong.png" style="max-width: 10%; height: auto;" alt="Yong-Kuk Jeong"/>
+		<img src="img/YKJeong.png" width="150" alt="Yong-Kuk Jeong"/>
 		<h2 class="project-tagline">Ph.D. Candidate in CASPER Lab.<br>Department of Naval Architecture & Ocean Engineering<br>Seoul National University, Seoul, Korea</h2>	  
     </section>
     <section class="main-content">
