논문 통과 반영
IJAMT, SNAK

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="page-header">
 		<h1 class="project-name">Yong-Kuk JEONG</h1>
 		<h2 class="project-tagline">jake8967 at snu.ac.kr</h2>
-		<img src="img/YKJeong.png" width="150" alt="Yong-Kuk Jeong"/>
+		<img src="img/YKJeong.png" width="150" alt="Yong-Kuk JEONG"/>
 		<h2 class="project-tagline">Ph.D. Candidate in CASPER Lab.<br>Department of Naval Architecture & Ocean Engineering<br>Seoul National University, Seoul, Korea</h2>	  
     </section>
     <section class="main-content">
@@ -43,7 +43,7 @@
 		<ul>
 			<li>Jong Hun Woo, Jong Moo Lee, and <b>Yong-Kuk Jeong</b>, (Submitted), <u>Development of an Evaluation Framework of Production Planning for the Shipbuilding Industry</u>, International Journal of Computer Integrated Manufacturing</li>
 			<li><b>Yong-Kuk Jeong</b>, Youngmin Kim, Su Heon Ju, Jinuk Jung, Jong-Gye Shin and Jong-Choel Kim, (Submitted), <u>Development of an optimization program for spatial layout considering the vulnerability of a naval vessel</u>, Journal of Ship Production and Design</li>
-			<li><b>Yong-Kuk JEONG</b>, SuHeon Ju, Huiqiang Shen, Dong Kun Lee, Jong-Gye Shin, Cheolho Ryu, (Submitted), <u>An analysis of shipyard spatial arrangement planning problem and a spatial arrangement algorithm considering free space and unplaced block</u>, International Journal of Advanced Manufacturing Technology</li>
+			<li><b>Yong-Kuk JEONG</b>, SuHeon Ju, Huiqiang Shen, Dong Kun Lee, Jong-Gye Shin, Cheolho Ryu, (Accepted), <u>An analysis of shipyard spatial arrangement planning problem and a spatial arrangement algorithm considering free space and unplaced block</u>, International Journal of Advanced Manufacturing Technology</li>
 			<li>Youngmin Kim, Jong Hun Woo, <b>Yong-Kuk Jeong</b>, Jong-Gye Shin, (Accepted), <u>Computational Shipyard Dynamics</u>, Journal of Ship Production and Design</li>
 			<li><b>Yong-Kuk JEONG</b>, Philippe Lee, and Jong Hun Woo, (2017), <u>Shipyard Block Logistics Simulation Using Process-centric Discrete Event Simulation Method</u>, Journal of Ship Production and Design, 33(3), pp. 1-12 <a href="http://www.ingentaconnect.com/content/sname/jspd/pre-prints/content-jspd170006">[LINK: Paper]</a></li>
 			<li>Jong Hun Woo, Youngmin Kim, <b>Yong-Kuk JEONG</b>, and Jong-Gye Shin, (2016), <u>A Research on Simulation Framework for the Advancement of Supplying Management Competency</u>, Journal of Ship Production and Design, 32(4), pp. 1-20 <a href="http://www.ingentaconnect.com/content/sname/jspd/pre-prints/content-jspd160014">[LINK: Paper]</a></li>
@@ -65,7 +65,7 @@
 		</ul>
 		<h3><a id="papers-domestic" class="anchor" href="#papers-domestic" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Papers (Domestic)</h3>
 		<ul>
-			<li>Jin-Uk Jung, <b>Yong-Kuk Jeong</b>, SuHeon Ju, Jong-Gye Shin, and JongChul Kim, (Submitted), <u>A Simplified Survivability Assessment Method and Spatial Layout Design Application for the Early Design Stage of Naval Vessels</u>, Journal of the Society of Naval Architects of Korea</li>
+			<li>Jin-Uk Jung, <b>Yong-Kuk Jeong</b>, SuHeon Ju, Jong-Gye Shin, and JongChul Kim, (Accepted), <u>A Simplified Survivability Assessment Method and Spatial Layout Design Application for the Early Design Stage of Naval Vessels</u>, Journal of the Society of Naval Architects of Korea</li>
 			<li>Seon-Jung Baek, Dae-Kyun Oh, Dong Kun Lee, Philippe Lee, Cheolho Ryu, Jong-Hun Woo, and <b>Yong-Kuk Jeong</b>, (2017), <u>A Process-centric Simulation Modeling Method Improving Product, Process, and Facility Information Representation Method</u>, Journal of the Korean Society of Marine Environment & Safety, 23(4), pp. 421-431 <a href="https://kosomes.jams.or.kr/po/volisse/sjPubsArtiPopView.kci?soceId=INS000000660&artiId=SJ0000000939&sereId=SER000000001&submCnt=1">[LINK: Paper]</a></li>
 			<li><b>Yong-Kuk Jeong</b>, Jong-Hun Woo, Dae-Kyun Oh, and Jong-Gye Shin, (2016), <u>A Shipyard Simulation System using the Process-centric Simulation Modeling Methodology: Case Study of the Simulation Model for the Shipyard Master Plan Validation</u>, Transactions of the Society of CAD/CAM Engineers, 21(2), pp. 204-214 <a href="https://www.dbpia.co.kr/Journal/ArticleDetail/NODE06761937">[LINK: Paper]</a></li>
 			<li>Youngmin Kim, <b>Yong-Kuk Jeong</b>, SuHeon Ju, Jong-Gye Shin, and Jung-Hack Shin, (2014), <u>Development of a Naval Vessel Compartment Arrangement Application using Differential Evolution Algorithm</u>, Transactions of the Society of CAD/CAM Engineers, 19(4), pp. 1-13 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE06071036">[LINK: Paper]</a></li>
