관심분야 수정

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 		</ul>		
 		<h3><a id="research-interests" class="anchor" href="#research-interests" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research Interests</h3>
 		<ul>
-			<li>Simulation of Shipbuilding Process and Shipyard Logistics</li>
+			<li>Shipbuilding Process and Shipyard Logistics Simulation</li>			
 			<li>Discrete Event System Simulation</li>
 			<li>Supply Chain Management</li>
 			<li>Layout Design Methodology (Shipyard, Naval Vessel)</li>
 			<li>System Development (C#, Silverlight, HTML)</li>
 			<li>Life Cycle Assessment</li>
-			<li>Combinatorial Optimization Algorithms</li> 
+			<li>Combinatorial Optimization Algorithm</li> 
 		</ul>
 		<h3><a id="papers-international" class="anchor" href="#papers-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Papers (International)</h3>
 		<ul>
