--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h1 class="project-name">Yong-Kuk JEONG</h1>
 		<h2 class="project-tagline">jake8967 at snu.ac.kr</h2>
 		<img src="img/YKJeong.png" width="150" alt="Yong-Kuk JEONG"/>
-		<h2 class="project-tagline">Ph.D. Candidate in CASPER Lab.<br>Department of Naval Architecture & Ocean Engineering<br>Seoul National University, Seoul, Korea</h2>	  
+		<h2 class="project-tagline">Postdoctoral Researcher<br>Research Institute of Marine Systems Engineering<br>Seoul National University (SNU), Seoul, Korea</h2>	  
     </section>
     <section class="main-content">
 		<h3><a id="profile" class="anchor" href="#profile" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Profile</h3>
@@ -23,19 +23,20 @@
 			<li>Scopus <a href="https://www.scopus.com/authid/detail.uri?origin=resultslist&authorId=56151145200&zone=">[LINK]</a></li>
 			<li>ORCID ID <a href="https://orcid.org/0000-0003-1878-773X">[LINK]</a></li>
 		</ul>		
+		<h3><a id="career" class="anchor" href="#career" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Career</h3>
+		<ul>
+			<li>Postdoctoral Researcher, Research Institute of Marine Systems Engineering, SNU, 2018-now</li>			
+		</ul>
 		<h3><a id="education" class="anchor" href="#education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h3>
 		<ul>
-			<li>Aug 2014, Ph.D. Candidate, Department of Naval Architecture and Ocean Engineering, Seoul National University (Advisor: Prof. Shin, Jong-Gye) <a href="http://casper.snu.ac.kr">[LINK: CASPER Lab.]</a></li>
-			<li>Feb 2011, B.S., Department of Naval Architecture and Ocean Engineering, Seoul National University</li>
-			<li>Feb 2007, graduated from Incheon Science High School</li>			
+			<li>Ph.D., Department of Naval Architecture and Ocean Engineering, SNU, 2018</li>
+			<li>B.Sc., Department of Naval Architecture and Ocean Engineering, SNU, 2011</li>			
 		</ul>		
 		<h3><a id="research-interests" class="anchor" href="#research-interests" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research Interests</h3>
 		<ul>
-			<li>Shipbuilding Process and Shipyard Logistics Simulation</li>			
+			<li>Shipyard Logistics Simulation</li>			
+			<li>Ship Production Management</li>			
 			<li>Discrete Event System Simulation</li>
-			<li>Supply Chain Management</li>
-			<li>Layout Design Methodology (Shipyard, Naval Vessel)</li>
-			<li>System Development (C#, Silverlight, HTML)</li>
 			<li>Life Cycle Assessment</li>
 			<li>Combinatorial Optimization Algorithm</li> 
 		</ul>
