--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h1 class="project-name">Yong-Kuk JEONG</h1>
 		<h2 class="project-tagline">jake8967 at snu.ac.kr</h2>
 		<img src="img/YKJeong.png" width="150" alt="Yong-Kuk JEONG"/>
-		<h2 class="project-tagline">Postdoctoral Researcher<br>Research Institute of Marine Systems Engineering<br>Seoul National University (SNU), Seoul, Korea</h2>	  
+		<h2 class="project-tagline">Postdoctoral Associate<br>Research Institute of Marine Systems Engineering<br>Seoul National University (SNU), Seoul, Korea</h2>	  
     </section>
     <section class="main-content">
 		<h3><a id="profile" class="anchor" href="#profile" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Profile</h3>
@@ -25,7 +25,7 @@
 		</ul>		
 		<h3><a id="career" class="anchor" href="#career" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Career</h3>
 		<ul>
-			<li>Postdoctoral Researcher, Research Institute of Marine Systems Engineering, SNU, 2018-now</li>			
+			<li>Postdoctoral Associate, Research Institute of Marine Systems Engineering, SNU, 2018-now</li>			
 		</ul>
 		<h3><a id="education" class="anchor" href="#education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h3>
 		<ul>
