--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 		<ul>
 			<li><b>정용국</b>, 심휘강, 신종계, (2018), <span style="color:#1d6ab8">공간 활용 전략을 고려한 조선소 블록 물류 시뮬레이션</span>, 2018년 한국해양과학기술협의회 춘계공동학술대회</li>
 			<li>이필립, 김성주, 유원선, <b>정용국</b>, (2018), <span style="color:#1d6ab8">해양호선 생산 코스트 최적화 생산 전략 및 실행 시뮬레이션 기술개발</span>, 2018년 한국해양과학기술협의회 춘계공동학술대회</li>
+			<li>김태호, 김병섭, 김영민, <b>정용국</b>, 신종계, (2018), <span style="color:#1d6ab8">Computational shipyard dynamics를 이용한 선체 외판 가공 공장 시뮬레이션</span>, 2018 한국CDE학회 동계학술대회</li>
 			<li>이종무, <b>정용국</b>, 우종훈, (2017), <span style="color:#1d6ab8">조선소 생산 계획 평가를 위한 평가 체계 개발</span>, 2017년 대한조선학회 추계학술대회</li>
 			<li>김병섭, <b>정용국</b>, 신종계, 민영기, (2017), <span style="color:#1d6ab8">조선소 블록 적치장 배치 문제의 강화 학습 적용 방안</span>, 2017년 대한조선학회 추계학술대회</li>
 			<li><b>정용국</b>, 신종계, 심휘강, 이필립, 우종훈, (2017), <span style="color:#1d6ab8">조선소 물류 시뮬레이션을 통한 선박 건조 공정의 녹색 물류 KPI 산출</span>, 2017년 한국정밀공학회 춘계학술대회 <a href="https://www.slideshare.net/YongKukJeong1/kpi-76475256">[LINK: Poster]</a></li>
