--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 		<ul>
 			<li>Postdoctoral Associate, Research Institute of Marine Systems Engineering, SNU, 2018-now</li>			
 		</ul>
+		<h3><a id="teaching-experience" class="anchor" href="#teaching-experience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teaching Experience</h3>
+		<ul>
+			<li>Lecturer (Ship production design), Department of Naval Architecture and Ocean Engineering, Inha Technical College, 2018-now</li>
+			<li>Lecturer (Introduction to ship production engineering), Department of Naval Architecture and Ocean Engineering, Inha Technical College, 2018</li>
+		</ul>
 		<h3><a id="education" class="anchor" href="#education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h3>
 		<ul>
 			<li>Ph.D., Department of Naval Architecture and Ocean Engineering, SNU, 2018</li>
@@ -35,11 +40,11 @@
 		</ul>		
 		<h3><a id="research-interests" class="anchor" href="#research-interests" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research Interests</h3>
 		<ul>
-			<li>Shipyard Logistics Simulation</li>			
-			<li>Ship Production Management</li>			
-			<li>Discrete Event System Simulation</li>
-			<li>Life Cycle Assessment</li>
-			<li>Combinatorial Optimization Algorithm</li> 
+			<li>Shipyard logistics simulation</li>			
+			<li>Ship production management</li>			
+			<li>Discrete event system simulation</li>
+			<li>Life cycle assessment</li>
+			<li>Combinatorial optimization algorithm</li> 
 		</ul>
 		<h3><a id="papers-international" class="anchor" href="#papers-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Papers (International)</h3>
 		<ul>
@@ -55,6 +60,7 @@
 		</ul>
 		<h3><a id="conference-international" class="anchor" href="#conference-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Conference (International)</h3>
 		<ul>
+			<li>Jong Gye Shin, Youngmin Kim, <b>Yong-Kuk JEONG</b>, Jong Hun Woo, Cheolho Ryu, (2018), <span style="color:#1d6ab8">Model-based Computational Dynamics and its Applications</span>, SNAME Maritime Convention 2018, Providence, RI, 24-27 October, 2018</li>
 			<li>Beongseop Kim, <b>Yong-Kuk JEONG</b>, Seunghyeok Son, Su Heon Ju, Huiqiang Shen, Jong Gye Shin, (2018), <span style="color:#1d6ab8">A Shipyard Green Logistics Concept and a Strategic Simulation to Reduce the Transportation Distance of Assembly Blocks in Shipyard</span>, PRESM 2018, Sapporo, Japan, 3-7 July, 2018</li>
 			<li>Jong Hun Woo, Jaeho Choi, Ji Hye Kim, <b>Yong-Kuk JEONG</b>, Philippe Lee, and Jong Ho Nam, (2018), <span style="color:#1d6ab8">Machine Learning in Ship Production</span>, COMPIT 2018, Pavone, Italy, 14-16 May, 2018</li>
 			<li><b>Yong-Kuk JEONG</b>, Jong Hun Woo, Philippe Lee, Youngmin Kim, Young-Ki Min, Jong Gye Shin, Yong Gil Lee, and Cheolho Ryu, (2018), <span style="color:#1d6ab8">Shipyard DES Simulation Framework and its Applications</span>, COMPIT 2018, Pavone, Italy, 14-16 May, 2018</li>
