사진+조선학회 실적

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 		</ul>	
 		<h3><a id="conference-domestic" class="anchor" href="#conference-domestic" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Conference (Domestic)</h3>
 		<ul>
+			<li>김영민, <b>정용국</b>, 심휘강, 신종계, 이동건, (2018), <span style="color:#1d6ab8">체계적인 조선소 생산 시스템 분석을 위한 computational shipyard dynamics와 적용 사례</span>, 2018년 대한조선학회 추계학술대회</li>
 			<li><b>정용국</b>, 심휘강, 신종계, (2018), <span style="color:#1d6ab8">공간 활용 전략을 고려한 조선소 블록 물류 시뮬레이션</span>, 2018년 한국해양과학기술협의회 춘계공동학술대회</li>
 			<li>이필립, 김성주, 유원선, <b>정용국</b>, (2018), <span style="color:#1d6ab8">해양호선 생산 코스트 최적화 생산 전략 및 실행 시뮬레이션 기술개발</span>, 2018년 한국해양과학기술협의회 춘계공동학술대회</li>
 			<li>김태호, 김병섭, 김영민, <b>정용국</b>, 신종계, (2018), <span style="color:#1d6ab8">Computational shipyard dynamics를 이용한 선체 외판 가공 공장 시뮬레이션</span>, 2018 한국CDE학회 동계학술대회</li>
