인하공전 경력 수정

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</ul>
 		<h3><a id="teaching-experience" class="anchor" href="#teaching-experience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teaching Experience</h3>
 		<ul>
-			<li>Lecturer (Ship production design), Department of Naval Architecture and Ocean Engineering, Inha Technical College, 2018-now</li>
+			<li>Lecturer (Ship production design), Department of Naval Architecture and Ocean Engineering, Inha Technical College, 2018</li>
 			<li>Lecturer (Introduction to ship production engineering), Department of Naval Architecture and Ocean Engineering, Inha Technical College, 2018</li>
 		</ul>
 		<h3><a id="education" class="anchor" href="#education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h3>
