--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <body oncontextmenu="return false">
     <section class="page-header">
 		<h1 class="project-name">Yong-Kuk JEONG</h1>
-		<h2 class="project-tagline">jake8967 at snu.ac.kr</h2>
+		<h2 class="project-tagline">jake8967 at hotmail.com</h2>
 		<img src="img/YKJeong.png" width="150" alt="Yong-Kuk JEONG"/>
-		<h2 class="project-tagline">Postdoctoral Associate<br>Research Institute of Marine Systems Engineering<br>Seoul National University (SNU), Seoul, Korea</h2>	  
+		<h2 class="project-tagline">Postdoc Researcher<br>Department of Sustainable Production Development<br>KTH - Royal Institute of Technology, Sweden</h2>	  
     </section>
     <section class="main-content">
 		<h3><a id="profile" class="anchor" href="#profile" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Profile</h3>
@@ -22,11 +22,12 @@
 			<li>Google Scholar <a href="https://scholar.google.co.kr/citations?user=y59QYYIAAAAJ&hl=ko">[LINK]</a></li>
 			<li>Scopus <a href="https://www.scopus.com/authid/detail.uri?origin=resultslist&authorId=56151145200&zone=">[LINK]</a></li>
 			<li>ORCID ID <a href="https://orcid.org/0000-0003-1878-773X">[LINK]</a></li>
-			<li>Curriculum Vitae <a href="docs/Public_CV_Yong-Kuk Jeong_SNU.pdf">[LINK]</a></li>
+			<li>Curriculum Vitae <a href="docs/Public_CV_Yong-Kuk Jeong_KTH.pdf">[LINK]</a></li>
 		</ul>		
 		<h3><a id="career" class="anchor" href="#career" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Career</h3>
 		<ul>
-			<li>Postdoctoral Associate, Research Institute of Marine Systems Engineering, SNU, 2018-now</li>			
+			<li>Postdoc Researcher, Department of Sustainable Production Development, KTH, 2019-now</li>			
+			<li>Postdoctoral Associate, Research Institute of Marine Systems Engineering, SNU, 2018-2019</li>			
 		</ul>
 		<h3><a id="teaching-experience" class="anchor" href="#teaching-experience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teaching Experience</h3>
 		<ul>
@@ -40,8 +41,9 @@
 		</ul>		
 		<h3><a id="research-interests" class="anchor" href="#research-interests" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research Interests</h3>
 		<ul>
-			<li>Shipyard logistics simulation</li>			
-			<li>Ship production management</li>			
+			<li>Production logistics</li>			
+			<li>Manufacturing simulation</li>			
+			<li>Ship production system</li>			
 			<li>Discrete event system simulation</li>
 			<li>Life cycle assessment</li>
 			<li>Combinatorial optimization algorithm</li> 
