--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h1 class="project-name">Yong-Kuk JEONG</h1>
 		<h2 class="project-tagline">jake8967 at hotmail.com</h2>
 		<img src="img/YKJeong.png" width="150" alt="Yong-Kuk JEONG"/>
-		<h2 class="project-tagline">Postdoc Researcher<br>Department of Sustainable Production Development<br>KTH - Royal Institute of Technology, Sweden</h2>	  
+		<h2 class="project-tagline">Postdoc Researcher<br>Dept. of Sustainable Production Development<br>KTH - Royal Institute of Technology, Sweden</h2>	  
     </section>
     <section class="main-content">
 		<h3><a id="profile" class="anchor" href="#profile" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Profile</h3>
