--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body oncontextmenu="return false">
     <section class="page-header">
 		<h1 class="project-name">Yong-Kuk JEONG</h1>
-		<h2 class="project-tagline">jake8967 at hotmail.com</h2>
+		<h2 class="project-tagline">yongkuk at kth.se</h2>
 		<img src="img/YKJeong.png" width="150" alt="Yong-Kuk JEONG"/>
 		<h2 class="project-tagline">Postdoc Researcher<br>Dept. of Sustainable Production Development<br>KTH - Royal Institute of Technology, Sweden</h2>	  
     </section>
