--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h1 class="project-name">Yong-Kuk JEONG</h1>
 		<h2 class="project-tagline">yongkuk at kth.se</h2>
 		<img src="img/YKJeong.png" width="150" alt="Yong-Kuk JEONG"/>
-		<h2 class="project-tagline">Postdoc Researcher<br>Dept. of Sustainable Production Development<br>KTH - Royal Institute of Technology, Sweden</h2>	  
+		<h2 class="project-tagline">Postdoc Researcher<br>Dept. of Sustainable Production Development<br>KTH Royal Institute of Technology, Sweden</h2>	  
     </section>
     <section class="main-content">
 		<h3><a id="profile" class="anchor" href="#profile" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Profile</h3>
@@ -26,18 +26,18 @@
 		</ul>		
 		<h3><a id="career" class="anchor" href="#career" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Career</h3>
 		<ul>
-			<li>Postdoc Researcher, Department of Sustainable Production Development, KTH, 2019-now</li>			
-			<li>Postdoctoral Associate, Research Institute of Marine Systems Engineering, SNU, 2018-2019</li>			
+			<li>Postdoc Researcher, Department of Sustainable Production Development, KTH, Sweden, 2019-now</li>			
+			<li>Postdoctoral Associate, Research Institute of Marine Systems Engineering, SNU, Rep. of Korea, 2018-2019</li>			
 		</ul>
 		<h3><a id="teaching-experience" class="anchor" href="#teaching-experience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teaching Experience</h3>
 		<ul>
-			<li>Lecturer (Ship production design), Department of Naval Architecture and Ocean Engineering, Inha Technical College, 2018</li>
-			<li>Lecturer (Introduction to ship production engineering), Department of Naval Architecture and Ocean Engineering, Inha Technical College, 2018</li>
+			<li>Lecturer (Ship production design), Department of Naval Architecture and Ocean Engineering, Inha Technical College, Rep. of Korea, 2018</li>
+			<li>Lecturer (Introduction to ship production engineering), Department of Naval Architecture and Ocean Engineering, Inha Technical College, Rep. of Korea, 2018</li>
 		</ul>
 		<h3><a id="education" class="anchor" href="#education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h3>
 		<ul>
-			<li>Ph.D., Department of Naval Architecture and Ocean Engineering, SNU, 2018</li>
-			<li>B.Sc., Department of Naval Architecture and Ocean Engineering, SNU, 2011</li>			
+			<li>Ph.D., Department of Naval Architecture and Ocean Engineering, SNU, Rep. of Korea, 2018</li>
+			<li>B.Sc., Department of Naval Architecture and Ocean Engineering, SNU, Rep. of Korea, 2011</li>			
 		</ul>		
 		<h3><a id="research-interests" class="anchor" href="#research-interests" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research Interests</h3>
 		<ul>
