--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
 		</ul>
 		<h3><a id="papers-international" class="anchor" href="#papers-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Papers (International)</h3>
 		<ul>
+			
+			<li>Byeongseop Kim, <b>Yong-Kuk Jeong</b>, Jong Gye Shin, (Submitted), <span style="color:#1d6ab8">Spatial Arrangement using Deep Reinforcement Learning to Minimize Rearrangement in Block Stockyards and Unnecessary Transporter Movement in Block Stockyards</span>, International Journal of Production Research</li>
+			<li>Suheon Ju, Saenal Sung, Huiqiang Shen, <b>Yong-Kuk Jeong</b>, Jong-Gye Shin, (Submitted), <span style="color:#1d6ab8">Process Design and System Development for Establishing Shipyard Mid-term Production Plans Using Backward Process-centric Simulation</span>, International Journal of Naval Architecture and Ocean Engineering</li>
+			<li>Jong Gye Shin, Youngmin Kim, <b>Yong-Kuk Jeong</b>, Jong Hun Woo, Cheolho Ryu, (Submitted), <span style="color:#1d6ab8">Model-based Computational Shipyard Dynamics and its Applications</span>, Journal of Ship Production and Design</li>
+			
+			
 			<li><b>Yong-Kuk JEONG</b>, Youngmin Kim, Su Heon Ju, Jong-Gye Shin, Jong-Choel Kim and Jong Hun Woo, (2018), <span style="color:#1d6ab8">A Spatial Layout Optimization Program considering the Survivability of a Naval Vessel in the Early Design Stage</span>, Journal of Ship Production and Design <a href="http://www.ingentaconnect.com/content/sname/jspd/pre-prints/content-jspd_170036;jsessionid=1edv0v96e8s3f.x-ic-live-01">[Link: Paper]</a></li>
 			<li>Jong Moo Lee, <b>Yong-Kuk JEONG</b>, and Jong Hun Woo, (2018), <span style="color:#1d6ab8">Development of an Evaluation Framework of Production Planning for the Shipbuilding Industry</span>, International Journal of Computer Integrated Manufacturing, 31(9), pp. 831-847 <a href="https://www.tandfonline.com/doi/full/10.1080/0951192X.2018.1449968">[Link: Paper]</a></li>
 			<li>Youngmin Kim, Jong Hun Woo, <b>Yong-Kuk JEONG</b>, Jong-Gye Shin, (2018), <span style="color:#1d6ab8">Computational Shipyard Dynamics</span>, Journal of Ship Production and Design, 34(4), pp. 355-367 <a href="http://www.ingentaconnect.com/content/sname/jspd/pre-prints/content-jspd_170029">[Link: Paper]</a></li>
