--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
 		</ul>
 		<h3><a id="papers-international" class="anchor" href="#papers-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Papers (International)</h3>
 		<ul>
+			<!--Submitted-->
 			<li>HuiQiang Shen, Jong Hun Woo, SuHeon Ju, <b>Yong-Kuk Jeong</b>, Dong Kun Lee, Jong Gye Shin, (Submitted), <span style="color:#1d6ab8">Development of simulation-based planning and scheduling system for middle-sized shipbuilding companies</span>, International Journal of Production Research</li>
 			<li>Byeongseop Kim, <b>Yong-Kuk Jeong</b>, Jong Gye Shin, (Submitted), <span style="color:#1d6ab8">Spatial Arrangement using Deep Reinforcement Learning to Minimize Rearrangement in Block Stockyards and Unnecessary Transporter Movement in Block Stockyards</span>, International Journal of Production Research</li>
 			<li>Suheon Ju, Saenal Sung, Huiqiang Shen, <b>Yong-Kuk Jeong</b>, Jong-Gye Shin, (Submitted), <span style="color:#1d6ab8">Process Design and System Development for Establishing Shipyard Mid-term Production Plans Using Backward Process-centric Simulation</span>, International Journal of Naval Architecture and Ocean Engineering</li>
 			<li>Jong Gye Shin, Youngmin Kim, <b>Yong-Kuk Jeong</b>, Jong Hun Woo, Cheolho Ryu, (Submitted), <span style="color:#1d6ab8">Model-based Computational Shipyard Dynamics and its Applications</span>, Journal of Ship Production and Design</li>
-			<li><b>Yong-Kuk JEONG</b>, Youngmin Kim, Su Heon Ju, Jong-Gye Shin, Jong-Choel Kim and Jong Hun Woo, (2018), <span style="color:#1d6ab8">A Spatial Layout Optimization Program considering the Survivability of a Naval Vessel in the Early Design Stage</span>, Journal of Ship Production and Design <a href="http://www.ingentaconnect.com/content/sname/jspd/pre-prints/content-jspd_170036;jsessionid=1edv0v96e8s3f.x-ic-live-01">[Link: Paper]</a></li>
+			<!--Submitted-->
+			<li><b>Yong-Kuk JEONG</b>, Youngmin Kim, Su Heon Ju, Jong-Gye Shin, Jong-Choel Kim and Jong Hun Woo, (2019), <span style="color:#1d6ab8">A Spatial Layout Optimization Program considering the Survivability of a Naval Vessel in the Early Design Stage</span>, Journal of Ship Production and Design, 35(2), pp. 126-138 <a href="http://www.ingentaconnect.com/content/sname/jspd/pre-prints/content-jspd_170036;jsessionid=1edv0v96e8s3f.x-ic-live-01">[Link: Paper]</a></li>
 			<li>Jong Moo Lee, <b>Yong-Kuk JEONG</b>, and Jong Hun Woo, (2018), <span style="color:#1d6ab8">Development of an Evaluation Framework of Production Planning for the Shipbuilding Industry</span>, International Journal of Computer Integrated Manufacturing, 31(9), pp. 831-847 <a href="https://www.tandfonline.com/doi/full/10.1080/0951192X.2018.1449968">[Link: Paper]</a></li>
 			<li>Youngmin Kim, Jong Hun Woo, <b>Yong-Kuk JEONG</b>, Jong-Gye Shin, (2018), <span style="color:#1d6ab8">Computational Shipyard Dynamics</span>, Journal of Ship Production and Design, 34(4), pp. 355-367 <a href="http://www.ingentaconnect.com/content/sname/jspd/pre-prints/content-jspd_170029">[Link: Paper]</a></li>
 			<li><b>Yong-Kuk JEONG</b>, SuHeon Ju, Huiqiang Shen, Dong Kun Lee, Jong Gye Shin, Cheolho Ryu, (2018), <span style="color:#1d6ab8">An analysis of shipyard spatial arrangement planning problem and a spatial arrangement algorithm considering free space and unplaced block</span>, International Journal of Advanced Manufacturing Technology, 95, pp. 4307–4325 <a href="https://link.springer.com/article/10.1007%2Fs00170-017-1525-1">[LINK: Paper]</a></li>
@@ -97,6 +99,7 @@
 		</ul>	
 		<h3><a id="conference-domestic" class="anchor" href="#conference-domestic" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Conference (Domestic)</h3>
 		<ul>
+			<li>이용길, 심휘강, 우종훈, <b>정용국</b>, 권기욱, 이필립, (2019), <span style="color:#1d6ab8">블록 조립 계획을 위한 시뮬레이션 시스템 구축</span>, 2019년 한국해양과학기술협의회 춘계공동학술대회</li>
 			<li>김영민, <b>정용국</b>, 심휘강, 신종계, 이동건, (2018), <span style="color:#1d6ab8">체계적인 조선소 생산 시스템 분석을 위한 computational shipyard dynamics와 적용 사례</span>, 2018년 대한조선학회 추계학술대회</li>
 			<li><b>정용국</b>, 심휘강, 신종계, (2018), <span style="color:#1d6ab8">공간 활용 전략을 고려한 조선소 블록 물류 시뮬레이션</span>, 2018년 한국해양과학기술협의회 춘계공동학술대회</li>
 			<li>이필립, 김성주, 유원선, <b>정용국</b>, (2018), <span style="color:#1d6ab8">해양호선 생산 코스트 최적화 생산 전략 및 실행 시뮬레이션 기술개발</span>, 2018년 한국해양과학기술협의회 춘계공동학술대회</li>
