--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body oncontextmenu="return false">
     <section class="page-header">
-		<h1 class="project-name">Yong-Kuk JEONG</h1>
+		<h1 class="project-name">Yongkuk JEONG</h1>
 		<h2 class="project-tagline">yongkuk at kth.se</h2>
 		<img src="img/YKJeong.png" width="150" alt="Yong-Kuk JEONG"/>
 		<h2 class="project-tagline">Postdoc Researcher<br>Dept. of Sustainable Production Development<br>KTH Royal Institute of Technology, Sweden</h2>	  
