--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <section class="main-content">
 		<h3><a id="profile" class="anchor" href="#profile" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Profile</h3>
 		<ul>
+			<li>KTH Profile <a href="https://www.kth.se/profile/yongkuk">[LINK]</a></li>
 			<li>Google Scholar <a href="https://scholar.google.co.kr/citations?user=y59QYYIAAAAJ&hl=ko">[LINK]</a></li>
 			<li>Scopus <a href="https://www.scopus.com/authid/detail.uri?origin=resultslist&authorId=56151145200&zone=">[LINK]</a></li>
 			<li>ORCID ID <a href="https://orcid.org/0000-0003-1878-773X">[LINK]</a></li>
@@ -26,18 +27,18 @@
 		</ul>		
 		<h3><a id="career" class="anchor" href="#career" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Career</h3>
 		<ul>
-			<li>Postdoc Researcher, Department of Sustainable Production Development, KTH, Sweden, 2019-now</li>			
-			<li>Postdoctoral Associate, Research Institute of Marine Systems Engineering, SNU, Rep. of Korea, 2018-2019</li>			
+			<li>Postdoc Researcher, Department of Sustainable Production Development, KTH Royal Institute of Technology, Sweden, 2019-now</li>			
+			<li>Postdoctoral Associate, Research Institute of Marine Systems Engineering, Seoul National University, South Korea, 2018-2019</li>			
 		</ul>
 		<h3><a id="teaching-experience" class="anchor" href="#teaching-experience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Teaching Experience</h3>
 		<ul>
-			<li>Lecturer (Ship production design), Department of Naval Architecture and Ocean Engineering, Inha Technical College, Rep. of Korea, 2018</li>
-			<li>Lecturer (Introduction to ship production engineering), Department of Naval Architecture and Ocean Engineering, Inha Technical College, Rep. of Korea, 2018</li>
+			<li>Lecturer (Ship production design), Department of Naval Architecture and Ocean Engineering, Inha Technical College, South Korea, 2018</li>
+			<li>Lecturer (Introduction to ship production engineering), Department of Naval Architecture and Ocean Engineering, Inha Technical College, South Korea, 2018</li>
 		</ul>
 		<h3><a id="education" class="anchor" href="#education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h3>
 		<ul>
-			<li>Ph.D., Department of Naval Architecture and Ocean Engineering, SNU, Rep. of Korea, 2018</li>
-			<li>B.Sc., Department of Naval Architecture and Ocean Engineering, SNU, Rep. of Korea, 2011</li>			
+			<li>Ph.D., Department of Naval Architecture and Ocean Engineering, Seoul National University, South Korea, 2018</li>
+			<li>B.Sc., Department of Naval Architecture and Ocean Engineering, Seoul National University, South Korea, 2011</li>			
 		</ul>		
 		<h3><a id="research-interests" class="anchor" href="#research-interests" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research Interests</h3>
 		<ul>
@@ -54,8 +55,8 @@
 			<li>HuiQiang Shen, Jong Hun Woo, SuHeon Ju, <b>Yong-Kuk Jeong</b>, Dong Kun Lee, Jong Gye Shin, (Submitted), <span style="color:#1d6ab8">Development of simulation-based planning and scheduling system for middle-sized shipbuilding companies</span>, International Journal of Production Research</li>
 			<li>Byeongseop Kim, <b>Yong-Kuk Jeong</b>, Jong Gye Shin, (Submitted), <span style="color:#1d6ab8">Spatial Arrangement using Deep Reinforcement Learning to Minimize Rearrangement in Block Stockyards and Unnecessary Transporter Movement in Block Stockyards</span>, International Journal of Production Research</li>
 			<!--Submitted-->
-			<li>Suheon Ju, Saenal Sung, Huiqiang Shen, <b>Yong-Kuk Jeong</b>, Jong-Gye Shin, (Accepted), <span style="color:#1d6ab8">Process Design and System Development for Establishing Shipyard Mid-term Production Plans Using Backward Process-centric Simulation</span>, International Journal of Naval Architecture and Ocean Engineering</li>
-			<li>Jong Gye Shin, Youngmin Kim, <b>Yong-Kuk Jeong</b>, Jong Hun Woo, Cheolho Ryu, (Accepted), <span style="color:#1d6ab8">Model-based Computational Shipyard Dynamics and its Applications</span>, Journal of Ship Production and Design</li>			
+			<li>Jong Gye Shin, Youngmin Kim, <b>Yong-Kuk Jeong</b>, Jong Hun Woo, Cheolho Ryu, (Available online), <span style="color:#1d6ab8">Model-based Computational Shipyard Dynamics and its Applications</span>, Journal of Ship Production and Design <a href="https://doi.org/10.5957/JSPD.01190001">[Link: Paper]</a></li>			
+			<li>Suheon Ju, Saenal Sung, Huiqiang Shen, <b>Yong-Kuk Jeong</b>, Jong-Gye Shin, (2020), <span style="color:#1d6ab8">System development for establishing shipyard mid-term production plans using backward process-centric simulation</span>, International Journal of Naval Architecture and Ocean Engineering, 12, pp. 20-37 <a href="https://doi.org/10.1016/j.ijnaoe.2019.05.005">[Link: Paper]</a></li>			
 			<li><b>Yong-Kuk Jeong</b>, Youngmin Kim, Su Heon Ju, Jong-Gye Shin, Jong-Choel Kim and Jong Hun Woo, (2019), <span style="color:#1d6ab8">A Spatial Layout Optimization Program considering the Survivability of a Naval Vessel in the Early Design Stage</span>, Journal of Ship Production and Design, 35(2), pp. 126-138 <a href="http://www.ingentaconnect.com/content/sname/jspd/pre-prints/content-jspd_170036;jsessionid=1edv0v96e8s3f.x-ic-live-01">[Link: Paper]</a></li>
 			<li>Jong Moo Lee, <b>Yong-Kuk Jeong</b>, and Jong Hun Woo, (2018), <span style="color:#1d6ab8">Development of an Evaluation Framework of Production Planning for the Shipbuilding Industry</span>, International Journal of Computer Integrated Manufacturing, 31(9), pp. 831-847 <a href="https://www.tandfonline.com/doi/full/10.1080/0951192X.2018.1449968">[Link: Paper]</a></li>
 			<li>Youngmin Kim, Jong Hun Woo, <b>Yong-Kuk Jeong</b>, Jong-Gye Shin, (2018), <span style="color:#1d6ab8">Computational Shipyard Dynamics</span>, Journal of Ship Production and Design, 34(4), pp. 355-367 <a href="http://www.ingentaconnect.com/content/sname/jspd/pre-prints/content-jspd_170029">[Link: Paper]</a></li>
