Recent publication is updated

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<li>Google Scholar <a href="https://scholar.google.co.kr/citations?user=y59QYYIAAAAJ&hl=ko">[LINK]</a></li>
 			<li>Scopus <a href="https://www.scopus.com/authid/detail.uri?origin=resultslist&authorId=56151145200&zone=">[LINK]</a></li>
 			<li>ORCID ID <a href="https://orcid.org/0000-0003-1878-773X">[LINK]</a></li>
-			<li>Curriculum Vitae <a href="docs/Public_CV_Yong-Kuk Jeong_KTH.pdf">[LINK]</a></li>
+			<li>Curriculum Vitae <a href="docs/Public_CV_Yongkuk Jeong_KTH.pdf">[LINK]</a></li>
 		</ul>		
 		<h3><a id="career" class="anchor" href="#career" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Career</h3>
 		<ul>
@@ -53,8 +53,8 @@
 		<ul>
 			<!--Submitted-->
 			<li>HuiQiang Shen, Jong Hun Woo, SuHeon Ju, <b>Yong-Kuk Jeong</b>, Dong Kun Lee and Jong Gye Shin, (Submitted), <span style="color:#1d6ab8">Development of simulation-based planning and scheduling system for middle-sized shipbuilding companies</span>, International Journal of Production Research</li>
-			<li>Byeongseop Kim, <b>Yong-Kuk Jeong</b> and Jong Gye Shin, (Submitted), <span style="color:#1d6ab8">Spatial Arrangement using Deep Reinforcement Learning to Minimize Rearrangement in Block Stockyards and Unnecessary Transporter Movement in Block Stockyards</span>, International Journal of Production Research</li>
-			<!--Submitted-->				
+			<!--Submitted-->	
+			<li>Byeongseop Kim, <b>Yongkuk Jeong</b> and Jong Gye Shin, (Accepted), <span style="color:#1d6ab8">Spatial Arrangement using Deep Reinforcement Learning to Minimize Rearrangement in Ship Block Stockyards</span>, International Journal of Production Research</li>						
 			<li>Jong Gye Shin, Youngmin Kim, <b>Yong-Kuk Jeong</b>, Jong Hun Woo and Cheolho Ryu, (Available online), <span style="color:#1d6ab8">Model-based Computational Shipyard Dynamics and its Applications</span>, Journal of Ship Production and Design <a href="https://doi.org/10.5957/JSPD.01190001">[Link: Paper]</a></li>			
 			<li>Suheon Ju, Saenal Sung, Huiqiang Shen, <b>Yong-Kuk Jeong</b> and Jong-Gye Shin, (2020), <span style="color:#1d6ab8">System development for establishing shipyard mid-term production plans using backward process-centric simulation</span>, International Journal of Naval Architecture and Ocean Engineering, 12, pp. 20-37 <a href="https://doi.org/10.1016/j.ijnaoe.2019.05.005">[Link: Paper]</a></li>			
 			<li>Masoud Zafarzadeh, Magnus Wiktorsson, Jannicke Baalsrud Hauge and <b>Yongkuk Jeong</b> (2019), <span style="color:#1d6ab8">Data-Driven Production Logistics - An Industrial Case Study on Potential and Challenges</span>, Smart and Sustainable Manufacturing Systems, 3(1), pp. 53-78 <a href="https://doi.org/10.1520/SSMS20190048">[Link: Paper]</a></li>		
@@ -70,8 +70,8 @@
 		</ul>
 		<h3><a id="conference-international" class="anchor" href="#conference-international" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Conference (International)</h3>
 		<ul>
-		<li>Jong Gye Shin, Youngmin Kim, Jong Hun Woo, Seunghyeok Son, Huiqiang Shen, Byeong-seop Kim, Cheolho Ryu, and <b>Yong-Kuk Jeong</b> (2019), <span style="color:#1d6ab8">Smart Shipyard Platform with Computational Shipyard Dynamics and its Application to Forming Shop</span>, SNAME Maritime Convention 2019, Tacoma, WA, 30 October - 1 November, 2019</li>
-		<li><b>Yong-Kuk Jeong</b> and Magnus Wiktorsson (2019), <span style="color:#1d6ab8">Process-Centric versus Resource-Centric Modelling: Initial findings and future research directions</span>, i3CDE 2019, Penang, Malaysia, 8-10 July, 2019</li>
+			<li>Jong Gye Shin, Youngmin Kim, Jong Hun Woo, Seunghyeok Son, Huiqiang Shen, Byeong-seop Kim, Cheolho Ryu, and <b>Yong-Kuk Jeong</b> (2019), <span style="color:#1d6ab8">Smart Shipyard Platform with Computational Shipyard Dynamics and its Application to Forming Shop</span>, SNAME Maritime Convention 2019, Tacoma, WA, 30 October - 1 November, 2019</li>
+			<li><b>Yong-Kuk Jeong</b> and Magnus Wiktorsson (2019), <span style="color:#1d6ab8">Process-Centric versus Resource-Centric Modelling: Initial findings and future research directions</span>, i3CDE 2019, Penang, Malaysia, 8-10 July, 2019</li>
 			<li><b>Yong-Kuk Jeong</b>, Huiqiang Shen, Youngmin Kim, Young-Ki Min, Jong Gye Shin, Philippe Lee, Jong Hun Woo, Yong Gil Lee (2019), <span style="color:#1d6ab8">Discrete Event Simulation for Strategic Shipyard Planning</span>, COMPIT 2019, Tullamore, Ireland, 25-27 March, 2019</li>
 			<li>Huiqiang Shen, <b>Yong-Kuk Jeong</b>, Jong Gye Shin, Philippe Lee, Jong Hun Woo, Yong Gil Lee, Sang Hun Kim, Ju Hyeon Jeong, (2018), <span style="color:#1d6ab8">Key Performance Indicators and Analysis Method for Ship Block Logistics Flow in Shipyards</span>, WSC 2018, Gothenburg, Sweden, 9-12 December, 2018</li>
 			<li>Jong Gye Shin, Youngmin Kim, <b>Yong-Kuk Jeong</b>, Jong Hun Woo, Cheolho Ryu, (2018), <span style="color:#1d6ab8">Model-based Computational Dynamics and its Applications</span>, SNAME Maritime Convention 2018, Providence, RI, 24-27 October, 2018</li>
