position name updated

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h1 class="project-name">Yongkuk Jeong</h1>
 		<h2 class="project-tagline">yongkuk at kth.se</h2>
 		<img src="img/YKJeong.png" width="150" alt="Yong-Kuk Jeong"/>
-		<h2 class="project-tagline">Postdoc Researcher<br>Dept. of Sustainable Production Development<br>KTH Royal Institute of Technology, Sweden</h2>	  
+		<h2 class="project-tagline">Postdoctoral Researcher<br>Dept. of Sustainable Production Development<br>KTH Royal Institute of Technology, Sweden</h2>	  
     </section>
     <section class="main-content">
 		<h3><a id="profile" class="anchor" href="#profile" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Profile</h3>
